assets/stylesheets/main.css
@font-face {
  font-family: 'VCR OSD Mono';
  font-display: swap;
  src: url('../fonts/VCR_OSD_MONO_1.001.ttf')
}

@font-face {
  font-family: 'Abel';
  font-style: normal;
  font-weight: 400;
  font-display: swap;
  src: local('Abel Regular'),
       local('Abel-Regular'),
       url(https://fonts.gstatic.com/s/abel/v8/MwQ5bhbm2POE2V9BPbh5uGM.woff2) format('woff2');
}

body {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0;
  height: 100vh;
  background: url('../images/bg.png') top left/250px no-repeat #2a3688;
}

body::after {
  content: '';
  position: absolute;
  bottom: 0;
  right: 0;
  width: 520px;
  height: 520px;
  background: url('../images/bg.png') top left/250px no-repeat;
  transform: rotate(180deg);
}

.container {
  padding: 20px;
  display: flex;
  flex-direction: column;
  align-items: center;
}

.picture {
  width: 120px;
  border-radius: 50%;
  border: 5px solid #31698c;
}

.title {
  margin-top: 10px;
  margin-bottom: 10px;
  font-family: 'VCR OSD Mono', sans-serif;
  font-size: 50px;
  color: #f7f7f7;
  text-shadow: 3px 2px #c92c8d;
  text-transform: uppercase;
  text-align: center;
}

.description {
  margin-top: 10px;
  margin-bottom: 10px;
  font-family: Abel, sans-serif;
  font-size: 20px;
  color: #f7f7f7;
  text-align: center;
}

.highlight {
  color: #da798c;
}

.social {
  padding: 0;
  width: 100%;
  list-style: none;
  display: flex;
  justify-content: space-evenly;
}

.social__icon {
  color: #f7f7f7;
}

.social__icon:hover {
  color: #cd278d;
}

@media screen and (min-width: 768px) {
  body {
    background: url('../images/bg.png') top left/60% no-repeat #2a3688;
  }

  body::after {
    background: url('../images/bg.png') top left/80% no-repeat;
  }
}


@media screen and (min-width: 1024px) {
  body {
    background: url('../images/bg.png') top left/45% no-repeat #2a3688;
  }

  body::after {
    background: url('../images/bg.png') top left/50% no-repeat;
    width: 100%;
    height: 100%;
  }

  .picture {
    margin-top: 20px;
    margin-bottom: 30px;
    width: 180px;
  }

  .title {
    font-size: 70px;
    margin-top: 0;
    margin-bottom: 30px;
  }

  .description {
    max-width: 50%;
  }

  .social {
    margin-top: 30px;
    width: 30%;
  }
}

@media screen and (min-width: 1920px) {
  body {
    background: url('../images/bg.png') top left/50% no-repeat #2a3688;
  }

  body::after {
    background: url('../images/bg.png') top left/40% no-repeat;
  }

  .picture {
    margin-top: 30px;
    width: 200px;
  }

  .title {
    font-size: 90px;
    margin-bottom: 50px;
  }

  .social {
    margin-top: 50px;
  }
}

